# cilantropy

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  app.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.rst  tox.ini  wsgi.py
cilantropy/: __init__.py  __main__.py  cilantropy.py  console.py  dist_worker.py  helpers.py  main.py  metadata.py  requirements.txt  settings.py  write_plist.py
cilantropy/static/: extra.css
cilantropy/static/css/: extra.css
cilantropy/static/js/: highlight.pack.js  main.js
cilantropy/templates/: about.html  console_scripts.html  distribution.html  main.html  metadata.html  metadata10.html  metadata11.html  metadata12.html  metadata21.html  paste_pkg_template.html  pypi_update.html  pypi_upgrade.html  system_information.html
cilantropy/tests/: test_main.py  test_metadata.py
contrib/nginx/: cilantropy
contrib/systemd/: cilantropy  cilantropy.service
contrib/upstart/: cilantro  cilantro.conf
